...
  "ButtonDeleteLocalFile": "Delete local file",
  "ButtonDeleteLocalItem": "Delete local item",
  "ButtonDisableAutoTimer": "Disable Auto Timer",
  "ButtonDisconnect": "Disconnect",
  "ButtonGoToWebClient": "Go to Web Client",
  "ButtonHistory": "History",
  "ButtonHome": "Home",
  "ButtonIssues": "Issues",
  "ButtonLatest": "Latest",
  "ButtonLibrary": "Library",
  "ButtonLocalMedia": "Local Media",
  "ButtonLogs": "Logs",
  "ButtonManageLocalFiles": "Manage Local Files",
  "ButtonMaskServerAddress": "Mask server address",
  "ButtonNewFolder": "New Folder",
  "ButtonNextEpisode": "Next Episode",
  "ButtonOk": "Ok",
  "ButtonOpenFeed": "Open Feed",
  "ButtonOverride": "Override",
  "ButtonPause": "Pause",
  "ButtonPlay": "Play",
  "ButtonPlayEpisode": "Play Episode",
  "ButtonPlaylists": "Playlists",
  "ButtonRead": "Read",
  "ButtonReadLess": "Read less",
  "ButtonReadMore": "Read more",
  "ButtonRemove": "Remove",
  "ButtonRemoveFromServer": "Remove from Server",
  "ButtonSave": "Save",
  "ButtonSaveOrder": "Save Order",
  "ButtonSearch": "Search",
  "ButtonSendEbookToDevice": "Send Ebook to Device",
  "ButtonSeries": "Series",
  "ButtonSetTimer": "Set Timer",
  "ButtonStream": "Stream",
  "ButtonSubmit": "Submit",
  "ButtonSwitchServerUser": "Switch Server/User",
  "ButtonUnmaskServerAddress": "Unmask server address",
  "ButtonUserStats": "User Stats",
...
  "LabelAutoDownloadEpisodes": "Auto Download Episodes",
  "LabelAutoRewindTime": "Auto rewind time",
  "LabelAutoSleepTimer": "Auto sleep timer",
  "LabelAutoSleepTimerAutoRewind": "Auto sleep timer auto rewind",
  "LabelAutoSleepTimerAutoRewindHelp": "When the auto sleep timer finishes, playing the item again will automatically rewind your position.",
  "LabelAutoSleepTimerHelp": "When playing media between the specified start and end times a sleep timer will automatically start.",
  "LabelBooks": "Books",
  "LabelChapterTrack": "Chapter Track",
  "LabelChapters": "Chapters",
  "LabelClosePlayer": "Close player",
  "LabelCollapseSeries": "Collapse Series",
  "LabelComplete": "Complete",
  "LabelContinueBooks": "Continue Books",
...
  "LabelDisableAutoRewind": "Disable auto rewind",
  "LabelDisableShakeToReset": "Disable shake to reset",
  "LabelDisableShakeToResetHelp": "Shaking your device while the timer is running OR within 2 minutes of the timer expiring will reset the sleep timer. Enable this setting to disable shake to reset.",
  "LabelDisableVibrateOnReset": "Disable vibrate on reset",
  "LabelDisableVibrateOnResetHelp": "When the sleep timer gets reset your device will vibrate. Enable this setting to not vibrate when the sleep timer resets.",
  "LabelDiscover": "Discover",
  "LabelDownload": "Download",
  "LabelDownloadUsingCellular": "Download using Cellular",
  "LabelDownloaded": "Downloaded",
  "LabelDuration": "Duration",
  "LabelEbook": "Ebook",
  "LabelEbooks": "Ebooks",
  "LabelEnable": "Enable",
...
  "LabelServerAddress": "Server address",
  "LabelSetEbookAsPrimary": "Set as primary",
  "LabelSetEbookAsSupplementary": "Set as supplementary",
  "LabelShakeSensitivity": "Shake sensitivity",
  "LabelShowAll": "Show All",
  "LabelSize": "Size",
  "LabelSleepTimer": "Sleep timer",
  "LabelSleepTimerAlmostDoneChime": "Play a chime when almost finished",
  "LabelSleepTimerAlmostDoneChimeHelp": "Play a chime when the sleep timer has 30 seconds remaining",
  "LabelStart": "Start",
  "LabelStartTime": "Start time",
  "LabelStatsBestDay": "Best Day",
  "LabelStatsDailyAverage": "Daily Average",
...
