...
    val rootList = mediaIdToChildren[AUTO_BROWSE_ROOT] ?: mutableListOf()

    val continueListeningItem = MediaItem.Builder()
      .setMediaId(CONTINUE_ROOT)
      .setMediaMetadata(
        MediaMetadata.Builder()
          .setTitle("Continue")
          .setArtworkUri(getUriToDrawable(context, R.drawable.exo_icon_localaudio))
          .setIsBrowsable(true)
          .setIsPlayable(false)
          .setMediaType(MediaMetadata.MEDIA_TYPE_FOLDER_MIXED)
          .build()
      )
...
